--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-image-gallery": "^1.2.7",
+        "react-map-gl": "^7.0.10",
         "react-scripts": "3.4.3"
     },
     "scripts": {
